<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="de.ur.mi.android.baudoku.ProjectListActivity">
    <item
        android:id="@+id/project_view_menu_edit_project"
        android:orderInCategory="100"
        android:title="@string/toolbar_project_edit"
        app:showAsAction="never" />
    <item
        android:id="@+id/project_view_menu_finish_project"
        android:orderInCategory="100"
        android:title="@string/toolbar_project_finish"
        app:showAsAction="never" />
    <item
        android:id="@+id/project_view_menu_cancel_project"
        android:orderInCategory="100"
        android:title="@string/toolbar_project_cancel"
        app:showAsAction="never" />
    <item
        android:id="@+id/project_view_menu_delete_project"
        android:orderInCategory="100"
        android:title="@string/toolbar_project_delete"
        app:showAsAction="never" />
</menu>
