<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/list"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="5dp">

    <ImageView
        android:id="@+id/project_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/ic_launcher" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start|center"
            android:text="@string/label_title" />

        <TextView
            android:id="@+id/address_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start|center"
            android:text="@string/label_address" />

        <TextView
            android:id="@+id/date_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center"
            android:layout_weight="1"
            android:text="@string/label_start" />

    </LinearLayout>

    <ImageView
        android:id="@+id/project_status"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="end|center"
        app:srcCompat="@android:drawable/ic_delete" />

</LinearLayout>