<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="de.ur.mi.android.baudoku.ProjectListActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/background_dark"
        android:orientation="horizontal"
        android:weightSum="1">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/activity_default_margin"
            android:layout_marginStart="@dimen/activity_default_margin"
            android:layout_marginTop="@dimen/activity_default_margin"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:id="@+id/app_acivity_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:layout_marginTop="20dp"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:text="@string/project_setting_style"
                android:textColor="@color/colorAccent"
                android:textSize="36sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/change_design"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/project_style"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp">

                <Button
                    android:id="@+id/project_style_btn_1"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="0.18"
                    android:background="@color/colorAccent"
                    android:text="@string/project_style_1"
                    android:textAlignment="center"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/project_style_btn_2"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginRight="2dp"
                    android:layout_weight="0.18"
                    android:background="@color/colorAccent"
                    android:text="@string/project_style_2"
                    android:textAlignment="viewEnd"
                    android:textSize="18sp" />

            </LinearLayout>


        </LinearLayout>


    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
